Versão Paraíba 9.5.0.2